[tool.poetry]
name = "leakylinks"
version = "0.1.0"
description = ""
authors = ["The Author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"
certifi = "2024.8.30"
charset-normalizer = ">=3.4.0"
idna = "3.10"
pandas = "2.2.3"
python-dateutil = "2.9.0.post0"
pytz = "^2024.2"
requests = "^2.32.3"
schedule = "^1.2.2"
six = "^1.16.0"
tzdata = "^2024.2"
urllib3 = "2.2.3"
bs4 = "^0.0.2"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
matplotlib = "^3.9.2"
jupyterlab = "^4.3.0"
notebook = "^7.2.2"
playwright = "^1.48.0"
prometheus-client = "^0.21.1"
pytesseract = "^0.3.13"
beautifulsoup4 = "^4.13.3"
tenacity = "^9.0.0"
keyboard = "^0.13.5"
python-levenshtein = "^0.26.1"
docker = "^7.1.0"
aiohttp = "^3.11.14"
ratelimit = "^2.2.1"
psycopg2 = "^2.9.10"
undetected-chromedriver = "3.5.5"
tldextract = "^5.1.3"
ace-tools = "^0.0"
streamlit = "^1.44.1"
transformers = "^4.51.3"
jbxapi = "^3.23.0"
boilerpy3 = "^1.0.7"
trafilatura = "^2.0.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
grequests = "^0.7.0"
pytest = "^8.4.1"
patchright = "^1.52.5"
playwright-stealth = "^2.0.0"
drissionpage = "4.0.5.6"
zendriver = "^0.12.1"
cloudscraper = "^1.2.71"
scraper = {path = "scraper", develop = true}
refiner = {path = "refiner", develop = true}
pipeline = {path = "pipeline", develop = true}
honey = {path = "honey", develop = true}
page_difference_checker = {path = "page_difference_checker", develop = true}
url_token_checker = {path = "url_token_checker", develop = true}
spi_detector = {path = "spi_detector", develop = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"