[tool.poetry]
name = "honey"
version = "0.1.0"
description = ""
authors = ["The Author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = ">=1.0.1,<2.0.0"
httpx = ">=0.27.0,<0.29"
pandas = ">=2.2.3,<3.0.0"
jupyterlab = ">=4.3.5,<5.0.0"
pillow = ">=11.1.0,<12.0.0"
imagehash = ">=4.3.2,<5.0.0"
matplotlib = ">=3.10.1,<4.0.0"
ipywidgets = ">=8.1.5,<9.0.0"
folium = ">=0.19.5,<0.20.0"
seaborn = ">=0.13.2,<0.14.0"
tldextract = ">=5.1.3,<6.0.0"
wordcloud = ">=1.9.4,<2.0.0"
streamlit = ">=1.44.1,<2.0.0"
dotenv = ">=0.9.9,<0.10.0"
qrcode = {extras = ["pil"], version = ">=8.2,<9.0"}
playwright = "1.52.0"
patchright = ">=1.52.4,<2.0.0"
jupyter = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
