[tool.poetry]
name = "spi_detector"
version = "0.1.0"
description = ""
authors = ["The Author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytesseract = "^0.3.13"
pillow = ">=11.1.0,<12.0.0"
pydantic = "^2.11.7"
streamlit = "^1.44.1"
ollama = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
